vlib/v/checker/tests/notice_or_error_on_duplicate_using_generic.out
vlib/v/checker/tests/notice_or_error_on_duplicate_using_generic.vv:9:7: notice: duplicate type: blah blah blah 11111
    7 |
    8 | fn main() {
    9 |     _ := Name1[int](123)
      |          ~~~~~~~~~~~~~~~
   10 |     _ := Name2[int](456)
   11 | }
vlib/v/checker/tests/notice_or_error_on_duplicate_using_generic.vv:10:7: error: duplicate type: blah blah blah 22222
    8 | fn main() {
    9 |     _ := Name1[int](123)
   10 |     _ := Name2[int](456)
      |          ~~~~~~~~~~~~~~~
   11 | }
