vlib/v/checker/tests/notice_or_error_on_duplicate_using_generic.vv
@[on_duplicate: 'blah blah blah 11111']
@[notice_if_duplicate]
type Name1[T] = T | int | string

@[on_duplicate: 'blah blah blah 22222']
type Name2[T] = T | int | string

fn main() {
	_ := Name1[int](123)
	_ := Name2[int](456)
}
